# privacy-safe-ai-public-health-signal-monitoring

./: .gitignore  LICENSE  README.md  environment.yaml  pyproject.toml  requirements.txt  run_demo.sh
data/: synthetic_signals.csv
docs/: grant_use_plan.md  project_scope.md  safety_note.md
notebooks/: exploratory_demo.ipynb
outputs/: baseline_summary.json  evaluation_summary.json  feature_contributions.csv  sample_predictions.csv
src/: __init__.py  evaluate.py  generate_data.py  score_signals.py  train_baseline.py  utils.py
