[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privacy-safe-ai-public-health-signal-monitoring"
version = "0.1.0"
description = "A cautious research prototype for interpretable, privacy-aware public-health signal monitoring on synthetic data."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "R Zuberi"}
]
dependencies = [
  "matplotlib>=3.3",
  "numpy>=1.19",
  "pandas>=1.1",
]

[tool.setuptools]
packages = ["src"]
